fix(#1079): ensure write lock is held during sdk save